<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosUsuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/txtTituloAC2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloAC2"
            android:gravity="center"
            android:textSize="28sp"
            android:layout_marginTop="35dp"
            android:textStyle="bold"
            android:textColor="@color/textoPrimario"
            />

        <TextView
            android:id="@+id/txtInfoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoname"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:textColor="@color/textoPrimario"
            />

        <TextView
            android:id="@+id/txtInfoDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/etfecha"
            android:textSize="16sp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/textoPrimario"
            />
        
        <TextView
            android:id="@+id/txtInfoTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infotelefono"
            android:textSize="16sp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/textoPrimario"
            />

        <TextView
            android:id="@+id/txtInfoEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/infoemail"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/textoPrimario"
            />

        <TextView
            android:id="@+id/txtInfoDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/infodesc"
            android:layout_marginTop="10dp"
            android:textColor="@color/textoPrimario"
            />

        <Button
            android:id="@+id/btnEditInfo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/txtbtnEditInfo"
            android:textSize="18sp"
            android:textColor="@color/Blanco"
            android:background="@color/Negro"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>