<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Blanco"
        >

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:foregroundGravity="center"
            android:background="@color/Blanco"
            >

            <EditText
                android:id="@+id/etxName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="16dp"
                android:hint="@string/etnombre"
                android:autofillHints="@string/etnombre"
                android:inputType="textPersonName"
                android:textColor="@color/textoSecundario"
                />

            <EditText
                android:id="@+id/etxFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="16dp"
                android:hint="@string/etfecha"
                android:autofillHints="@string/etfecha"
                android:inputType="date"
                android:textColor="@color/textoSecundario"
                />

            <EditText
                android:id="@+id/etxPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="16dp"
                android:hint="@string/ettelefono"
                android:autofillHints="@string/ettelefono"
                android:inputType="phone"
                android:textColor="@color/textoSecundario"
                />

            <EditText
                android:id="@+id/etxEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="16dp"
                android:hint="@string/etemail"
                android:autofillHints="@string/etemail"
                android:inputType="textEmailAddress"
                android:textColor="@color/textoSecundario"
                />

            <TextView
                android:id="@+id/txtDescTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulodesc"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/textoPrimario"
                />

            <EditText
                android:id="@+id/etxDescription"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:inputType="text"
                android:hint="@string/etdescripcion"
                android:autofillHints="@string/etdescripcion"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/form"
            android:layout_marginTop="250dp"
            android:background="@color/Negro"
            android:text="@string/txtbtnNext"
            android:textColor="@color/Blanco"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>